# agentic-design-patterns

./: .env.example  .gitignore  README.md  binarygap_9855.py  pyproject.toml
hands_one_code_examples/: 11_1_goal_monitoring.py  11_2_goal_monitoring.py  12_1_exception_recovery.py  13_1_human_in_the_loop.py  14_1_rag.py  14_2_rag.py  2_1_routing.py  2_2_routing.py  3_1_parallelization.py  3_2_parallelization.py  3_3_parallelization.py  4_1_reflection.py  4_2_reflection.py  4_3_reflection.py  4_4_reflection.py  5_1_tools.py  5_2_tools.py  5_3_tools.py  6_1_plan.py  6_2_plan.py  7_1_multi_agent.py  7_2_multi_agent.py  7_3_multi_agent.py  7_4_multi_agent.py  8_1_memory.py  8_2_memory.py  __init__.py  async.py  fastmcp_server.py  multi_processing.py  run_example.py  thread.py
hands_one_code_examples/1_prompt_chaning/: 1_1_prompt_chaining.py
hands_one_code_examples/_shared/: __init__.py  adk_runtime.py  adk_web_loader.py  hitl_runtime.py  langgraph_memory.py
tests/: test_11_2_goal_monitoring.py  test_12_1_exception_recovery.py  test_13_1_human_in_the_loop.py  test_14_1_rag.py  test_2_1_routing.py  test_2_2_routing.py  test_3_1_parallelization.py  test_3_2_parallelization.py  test_3_3_parallelization.py  test_4_1_reflection.py  test_4_2_reflection.py  test_4_3_reflection.py  test_5_1_tools.py  test_5_2_tools.py  test_5_3_tools.py  test_6_1_plan.py  test_6_2_plan.py  test_7_1_multi_agent.py  test_7_2_multi_agent.py  test_7_3_multi_agent.py  test_7_4_multi_agent.py  test_8_1_memory.py  test_8_2_memory.py  test_prompt_chaining.py  test_routing.py
tests/_support/: __init__.py  (+1 more)
(+9 files in other folders)
