[project]
name = "agentic-design-patterns"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "crewai==0.130.0",
    "google-adk>=2.3.0",
    "google-genai>=2.10.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
